--- a/client/src/pages/home/subsnSocials/SubsnSocials.css
+++ b/client/src/pages/home/subsnSocials/SubsnSocials.css
@@ -33,18 +33,19 @@
 .SubsnSocials h2{
     font-size: 1.4rem;
 }
-.subscribe {
+.subscribee {
     position: relative;
-    height: 60px;
+    height: 70px;
     width: 240px;
     padding: 20px;
     background-color: #FFF;
     border-radius: 4px;
     color: #333;
+    font-size: 10px;
     box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.2);
   }
   
-  .subscribe:after {
+  .subscribee:after {
     position: absolute;
     content: "";
     right: -10px;
@@ -56,7 +57,7 @@
     border-bottom: 10px solid #285c7c;
   }
   
-  .subscribe p {
+  .subscribee p {
     text-align: center;
     font-size: 20px;
     font-weight: bold;
@@ -64,7 +65,7 @@
     line-height: 28px;
   }
   
-  .subscribe input {
+  .subscribee input {
     position: absolute;
     bottom: 30px;
     border: none;
@@ -73,15 +74,15 @@
     width: 82%;
     background: transparent;
     transition: all .25s ease;
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
   
-  .subscribe input:focus {
+  .subscribee input:focus {
     outline: none;
     border-bottom: 1px solid #285c7c;
   }
   
-  .subscribe .submit-btn {
+  .subscribee .submit-btnn {
     position: absolute;
     border-radius: 30px;
     border-bottom-right-radius: 0;
@@ -99,15 +100,15 @@
     transition: all .25s ease;
   }
   
-  .subscribe .submit-btn:hover {
+  .subscribee .submit-btnn:hover {
     background-color: #eeb441;
     box-shadow: -5px 6px 20px 0px rgba(20, 20, 20, 0.569);
   }
-  .card svg {
+  .cardss svg {
     height: 25px;
   }
   
-  .card {
+  .cardss {
     position: relative;
     display: flex;
     align-items: center;
@@ -120,7 +121,7 @@
     width: 200px;
   }
   
-  .card::before, .card::after {
+  .cardss::before, .cardss::after {
     position: absolute;
     display: flex;
     align-items: center;
@@ -130,40 +131,40 @@
     z-index: 1;
   }
   
-  .card::before {
+  .cardss::before {
     content: "";
     left: 0;
     justify-content: flex-end;
     background-color: #285c7c;
   }
   
-  .card::after {
+  .cardss::after {
     content: "";
     right: 0;
     justify-content: flex-start;
     background-color: #285c7c;
   }
   
-  .card:hover {
+  .cardss:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   }
   
-  .card:hover span {
+  .cardss:hover span {
     opacity: 0;
     z-index: -3;
   }
   
-  .card:hover::before {
+  .cardss:hover::before {
     opacity: 0.5;
     transform: translateY(-100%);
   }
   
-  .card:hover::after {
+  .cardss:hover::after {
     opacity: 0.5;
     transform: translateY(100%);
   }
   
-  .card span {
+  .cardss span {
     position: absolute;
     display: flex;
     align-items: center;
@@ -178,7 +179,7 @@
     z-index: 2;
   }
   
-  .card .social-link {
+  .cardss .social-link {
     position: relative;
     display: flex;
     align-items: center;
@@ -191,13 +192,13 @@
     transition: 0.25s;
   }
   
-  .card .social-link .svg {
+  .cardss .social-link .svg {
     text-shadow: 1px 1px #285c7c;
     transform: scale(1);
     color: #eeb441;
   }
   
-  .card .social-link:hover {
+  .cardss .social-link:hover {
     animation: bounce_613 0.4s linear;
   }
   
