--- a/client/src/pages/nav/Nav.css
+++ b/client/src/pages/nav/Nav.css
@@ -17,6 +17,41 @@
     font-size: 30px;
     font-weight: 600;
 }
+.dropdown{
+    cursor: pointer;
+}
+.dropdown >ul{
+    background: #eeb441;
+    width: 150px;
+    min-height: 50px;
+    min-width: 5rem;
+    position: absolute;
+    transition: all 0.5s ease;
+    margin-top: 1rem;
+    right: -70px;
+    top: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+ul li ul li {
+    clear: both;
+    width: 100%;
+    padding: 20px 0px;
+    position: relative;
+  }
+  .closeButton{
+    color: white;
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 20px;
+  }
+  .Logo>img{
+    height: 80%;
+  }
 .Menu{
 width: 60%;
 height: 100%;
@@ -25,6 +60,7 @@ justify-content: center;
 align-items: center;
 padding-right: 150px;
 }
+
 .Menu>ul{
     width: 100%;
     height: 100%;
@@ -43,8 +79,8 @@ padding-right: 150px;
     transition: 1.2s;
 }
 .Menu a:hover{
-    color: #285c7c;
+    color: #eeb441;
 }
 .Menu a:active{
-    color: #285c7c;
+    color: #eeb441;
 }
